// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderlessInput.vue renders correctly with default props 1`] = `
<div aria-roledescription="input-container" class="input-wrap">
  <div class="label-container">
    <!---->
    <!---->
    <!---->
  </div> <input placeholder="default" type="text" class="headerless-input" style="width: 100%; height: 48px;">
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`HeaderlessInput.vue renders correctly with isPassword prop 1`] = `
<div aria-roledescription="input-container" class="input-wrap">
  <div class="label-container">
    <!---->
    <!---->
    <!---->
  </div> <input placeholder="default" type="password" class="headerless-input password" style="width: 100%; height: 48px;">
  <!---->
  <!----> <svg class="input-wrap__image"></svg>
  <!---->
</div>
`;

exports[`HeaderlessInput.vue renders correctly with size props 1`] = `
<div aria-roledescription="input-container" class="input-wrap">
  <div class="label-container">
    <!---->
    <!---->
    <!---->
  </div> <input placeholder="test" type="text" class="headerless-input" style="width: 30px; height: 20px;">
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;
